<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewFigure"
        android:layout_width="277dp"
        android:layout_height="205dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/perimetro_triangulo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayoutL1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:layout_editor_absoluteX="198dp"
        tools:layout_editor_absoluteY="218dp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFigure">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputEditTextL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lado1"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayoutL2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:layout_editor_absoluteX="198dp"
        tools:layout_editor_absoluteY="218dp"
        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutL1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputEditTextL2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lado2"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayoutL3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:layout_editor_absoluteX="198dp"
        tools:layout_editor_absoluteY="218dp"
        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutL2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputEditTextL3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lado3"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutL2">

        <Button
            android:id="@+id/buttonCalcu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/calcular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_weight="1"/>




    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@color/plum"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayoutButton"
        tools:layout_editor_absoluteX="-16dp">

        <TextView
            android:id="@+id/textViewResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_weight="1"
            android:text="@string/perimetro"
            android:textColor="@color/whitesmoke"
            android:textSize="40dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_weight="1"
            android:textColor="@color/whitesmoke"
            android:textSize="40dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>